--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^3.0.0",
+    "driver.js": "^1.4.0",
     "framer-motion": "^12.23.25",
     "lucide-react": "^0.294.0",
     "next": "14.0.4",
